--- a/examples/text/index.html
+++ b/examples/text/index.html
@@ -2,15 +2,15 @@
   "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>Entity test</title>
+  <title>Text test</title>
 
   <link rel="stylesheet" type="text/css" href="../../res/css/tophat.css">
 
   <script type="text/javascript" src="../../src/base.js"></script>
-  <script type="text/javascript" src="../../src/entity.js"></script>
+  <script type="text/javascript" src="../../src/text.js"></script>
   <script type="text/javascript" src="../../src/helpers.js"></script>
 
-  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
   <canvas id="test">Your browser is not supported</canvas>
