--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -12,12 +12,14 @@
   <!-- include source files here... -->
   <script type="text/javascript" src="../src/base.js"></script>
   <script type="text/javascript" src="../src/entity.js"></script>
+  <script type="text/javascript" src="../src/text.js"></script>
   <script type="text/javascript" src="../src/helpers.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec-helper.js"></script>
   <script type="text/javascript" src="spec/base-spec.js"></script>
   <script type="text/javascript" src="spec/entity-spec.js"></script>
+  <script type="text/javascript" src="spec/text-spec.js"></script>
   <script type="text/javascript" src="spec/helpers-spec.js"></script>
 
   <script type="text/javascript">
