--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="../src/base.js"></script>
   <script type="text/javascript" src="../src/entity.js"></script>
   <script type="text/javascript" src="../src/text.js"></script>
+  <script type="text/javascript" src="../src/game.js"></script>
   <script type="text/javascript" src="../src/helpers.js"></script>
 
   <!-- include spec files here... -->
@@ -20,6 +21,7 @@
   <script type="text/javascript" src="spec/base-spec.js"></script>
   <script type="text/javascript" src="spec/entity-spec.js"></script>
   <script type="text/javascript" src="spec/text-spec.js"></script>
+  <script type="text/javascript" src="spec/game-spec.js"></script>
   <script type="text/javascript" src="spec/helpers-spec.js"></script>
 
   <script type="text/javascript">
@@ -53,5 +55,6 @@
 </head>
 
 <body>
+  <canvas style="display: none"></canvas>
 </body>
 </html>
