--- a/examples/positions/index.html
+++ b/examples/positions/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Game test</title>
 
-  <link rel="stylesheet" type="text/css" href="../../res/css/tophat.css">
+  <link rel="stylesheet" type="text/css" href="../res/css/tophat.css">
 
   <script type="text/javascript" src="../../src/base.js"></script>
   <script type="text/javascript" src="../../src/entity.js"></script>
