--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="../src/base.js"></script>
   <script type="text/javascript" src="../src/entity.js"></script>
   <script type="text/javascript" src="../src/text.js"></script>
+  <script type="text/javascript" src="../src/particle.js"></script>
   <script type="text/javascript" src="../src/game.js"></script>
   <script type="text/javascript" src="../src/helpers.js"></script>
 
@@ -21,6 +22,7 @@
   <script type="text/javascript" src="spec/base-spec.js"></script>
   <script type="text/javascript" src="spec/entity-spec.js"></script>
   <script type="text/javascript" src="spec/text-spec.js"></script>
+  <script type="text/javascript" src="spec/particle-spec.js"></script>
   <script type="text/javascript" src="spec/game-spec.js"></script>
   <script type="text/javascript" src="spec/helpers-spec.js"></script>
 
