changes required for ejecta

--- a/examples/entity/index.html
+++ b/examples/entity/index.html
@@ -13,6 +13,6 @@
   <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-  <canvas id="test">Your browser is not supported</canvas>
+  <canvas id="canvas">Your browser is not supported</canvas>
 </body>
 </html>
