--- a/examples/blank-project/index.html
+++ b/examples/blank-project/index.html
@@ -13,6 +13,6 @@
     <p>x: <span class="x">0</span></p>
     <p>y: <span class="y">0</span></p>
   </div>
-  <canvas id="test">Your browser is not supported</canvas>
+  <canvas id="canvas">Your browser is not supported</canvas>
 </body>
 </html>
