--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -57,6 +57,6 @@
 </head>
 
 <body>
-  <canvas style="display: none"></canvas>
+  <canvas id="canvas" style="display: none"></canvas>
 </body>
 </html>
